@@ -2,6 +2,7 @@ v2.8.19 drop autogenerated files from SVN (Mike Frysinger)
         add words from "The Top 500 Worst Passwords of All Time" <http://www.whatsmypass.com/the-top-500-worst-passwords-of-all-time> to dicts/cracklib-small (patch by Fabian Greffrath)
         include sys/stat.h in python/_cracklibmodule.c (Mike Frysinger)
         add test suite for Python binding (Jan Dittberner)
+        port Python binding to Python3 (Jan Dittberner)
 v2.8.18 also include stdlib.h in stringlib.c (Mike Frysinger)
         make sure python lib builds against build dir instead of system installed libs (Arfrever Frehtes Taifersar Arahesis)
 v2.8.17 fixed compilation on interix systems
